# EVA

./: .gitignore  README.md  installation_node.md  node-installation-guide.md  requirements.txt
DPT/: TODO.md  build_compose.yaml  compose.yaml  dpt.py
DPT/CONTROL/: broker.py  protocol.txt
DPT/CONTROL/base_module/: Dockerfile
DPT/CONTROL/base_module/base_module/: pyproject.toml  setup.py
DPT/CONTROL/broker/: Dockerfile  broker.py
DPT/CONTROL/dpt_module/: pyproject.toml
DPT/CONTROL/dpt_module/src/: dpt_module.py
DPT/DATA/op_data/: Dockerfile  op_data.py  start_db.bat
DPT/FUNCTIONALITY/: module.py
DPT/FUNCTIONALITY/marker_detection/: cli.py  requirements.txt  setup.py
DPT/FUNCTIONALITY/marker_detection/cli_data/: md_settings.json
DPT/FUNCTIONALITY/marker_detection/scripts/: make_markers.py  md_gui.py
DPT/INTERFACE/: eva.py
DPT/INTERFACE/eva/: Dockerfile  eva.py  requirements.txt
DPT/UI/django_app/: Dockerfile  requirements.txt
DPT/UI/nginx_conf/: Dockerfile  nginx.conf  nginx.conf.template
DPT/UI/process_ui/: manage.py
DPT/UI/process_ui/process_ui/: settings.py  wsgi.py
DPT/UI/process_ui/toolpath_manager/: urls.py  views.py
DPT/testing/: backdriving_test.py  django_test.py  make_toolpath_test.py
DPT/testing/comm_testing/: compose.yaml
DPT/testing/comm_testing/comm1/: Dockerfile  comm1.py
DPT/testing/dockertest/: Dockerfile  dockertest.py
DT/: dt.py
DT/FUNCTIONALITY/marker_detection/: README.md  setup.cfg
DT/FUNCTIONALITY/marker_detection/cli_data/: calibration.conf
DT/FUNCTIONALITY/marker_detection/scripts/: md_daemon.py
(+21 files in other folders)
