[metadata]
name = aiiof_marker_detection
version = 0.4a1
author = Robert Knobloch
author_email = robert.knobloch@stud.tu-darmstadt.de
description = A package for the AruCo marker detection system for the AI-in-Orbit Factory research project (TU Darmstadt)
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/TDasbach/Digital_Process_Twin
classifiers =
    Programming Language :: Python :: 3.7
    Development Status :: 4 - Alpha
    Environment :: GPU :: NVIDIA CUDA :: 11.0
    Intended Audience :: Science/Research

[options]
package_dir =
    = src
packages = find:
python_requires = == 3.7.*
install_requires =
    Cython
    numpy
    opencv-contrib-python
    PyOpenGL
    PyOpenGL-accelerate
    pyzed

[options.packages.find]
where=src